# hylaean_splat

./: .gitignore  Cargo.toml  README.md
src/: config.rs  errors.rs  lib.rs  main.rs
src/agentic/: mod.rs
src/cli/: commands.rs  mod.rs
src/core/: agent.rs  data_manager.rs  mod.rs  tool_manager.rs
src/formats/: camera_params.rs  mod.rs  point_cloud.rs
src/integrations/: brush_app.rs  colmap.rs  dynamic_3dgs.rs  four_d_gaussians.rs  gaussian_splatting.rs  mod.rs  seasplat.rs  skysplat.rs
testing/: IMPLEMENTATION_PLAN.md  INSTALLATION_SCRIPTS.md  QUICK_START.md  README.md  TEST_DATASETS.md  VALIDATION_FRAMEWORK.md  WALKTHROUGH_GUIDE.md
testing/scripts/: run_simple_pipeline.sh  test_cli_integration.sh
