[package]
name = "hylaean_splat"
version = "0.1.0"
edition = "2021"
description = "Operating system for 3D Gaussian splatting tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyjohnso/hylaean_splat"
authors = ["Kyle Johnson <kyjohnso@example.com>"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sled = "0.34"

# HTTP client for API interactions
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
walkdir = "2.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"

# Point cloud processing
ply-rs = "0.1"

# Git operations
git2 = "0.18"

# Process management
which = "5.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Path manipulation
path-absolutize = "3.1"

# Directory utilities
dirs = "5.0"

# URL parsing
url = "2.4"

# Regular expressions
regex = "1.10"

[workspace]
members = [
    "."
]

[[bin]]
name = "hylaeansplat"
path = "src/main.rs"